--- a/pipeline/Load Manifests Data.json
+++ b/pipeline/Load Manifests Data.json
@@ -1,6 +1,21 @@
 {
 	"name": "Load Manifests Data",
 	"properties": {
+		"activities": [
+			{
+				"name": "Get Manifest List",
+				"type": "Lookup",
+				"dependsOn": [],
+				"policy": {
+					"timeout": "7.00:00:00",
+					"retry": 0,
+					"retryIntervalInSeconds": 30,
+					"secureOutput": false,
+					"secureInput": false
+				},
+				"userProperties": []
+			}
+		],
 		"folder": {
 			"name": "Axiom Pipelines/Production"
 		},
