--- a/pipeline/Load Manifests Data.json
+++ b/pipeline/Load Manifests Data.json
@@ -16,6 +16,11 @@
 				"userProperties": []
 			}
 		],
+		"parameters": {
+			"CustomerID": {
+				"type": "int"
+			}
+		},
 		"folder": {
 			"name": "Axiom Pipelines/Production"
 		},
