Updating pipeline: Load Manifests Data

--- a/pipeline/Load Manifests Data.json
+++ b/pipeline/Load Manifests Data.json
@@ -30,6 +30,19 @@
 					},
 					"firstRowOnly": false
 				}
+			},
+			{
+				"name": "Iterate Manifest List",
+				"type": "ForEach",
+				"dependsOn": [
+					{
+						"activity": "Get Manifest List",
+						"dependencyConditions": [
+							"Succeeded"
+						]
+					}
+				],
+				"userProperties": []
 			}
 		],
 		"parameters": {
