Updating pipeline: Load Manifests Data

--- a/pipeline/Load Manifests Data.json
+++ b/pipeline/Load Manifests Data.json
@@ -73,7 +73,17 @@
 							"inputs": [
 								{
 									"referenceName": "SrcManifestFiles",
-									"type": "DatasetReference"
+									"type": "DatasetReference",
+									"parameters": {
+										"BlobContainer": {
+											"value": "@pipeline().parameters.BlobContainer",
+											"type": "Expression"
+										},
+										"Directory": {
+											"value": "@pipeline().parameters.Directory",
+											"type": "Expression"
+										}
+									}
 								}
 							]
 						}
