Updating pipeline: Load Manifests Data

--- a/pipeline/Load Manifests Data.json
+++ b/pipeline/Load Manifests Data.json
@@ -82,6 +82,10 @@
 										"Directory": {
 											"value": "@pipeline().parameters.Directory",
 											"type": "Expression"
+										},
+										"ManifestFile": {
+											"value": "@item().ManifestName",
+											"type": "Expression"
 										}
 									}
 								}
