--- a/pipeline/Load Manifests Data.json
+++ b/pipeline/Load Manifests Data.json
@@ -44,6 +44,10 @@
 				],
 				"userProperties": [],
 				"typeProperties": {
+					"items": {
+						"value": "@activity('Get Manifest List').output.value",
+						"type": "Expression"
+					},
 					"activities": [
 						{
 							"name": "Load Manifest Data",
