Updating pipeline: Load Manifests Data

--- a/pipeline/Load Manifests Data.json
+++ b/pipeline/Load Manifests Data.json
@@ -139,7 +139,11 @@
 					"secureOutput": false,
 					"secureInput": false
 				},
-				"userProperties": [],
+				"userProperties": [
+					{
+						"name": "test"
+					}
+				],
 				"typeProperties": {
 					"source": {
 						"type": "AzureSqlSource",
