--- a/pipeline/Load Manifests Data.json
+++ b/pipeline/Load Manifests Data.json
@@ -52,7 +52,14 @@
 						{
 							"name": "Load Manifest Data",
 							"type": "Copy",
-							"dependsOn": [],
+							"dependsOn": [
+								{
+									"activity": "Process Manifest Records",
+									"dependencyConditions": [
+										"Succeeded"
+									]
+								}
+							],
 							"policy": {
 								"timeout": "7.00:00:00",
 								"retry": 0,
@@ -96,7 +103,7 @@
 							]
 						},
 						{
-							"name": "dataflow1",
+							"name": "Process Manifest Records",
 							"type": "ExecuteDataFlow",
 							"dependsOn": [],
 							"policy": {
