--- a/pipeline/Load Manifests Data.json
+++ b/pipeline/Load Manifests Data.json
@@ -116,7 +116,7 @@
 							"userProperties": [],
 							"typeProperties": {
 								"dataflow": {
-									"referenceName": "dataflow1",
+									"referenceName": "Manifest_Records",
 									"type": "DataFlowReference"
 								},
 								"compute": {
