Updating pipeline: Stage Manifests Data

--- a/pipeline/Stage Manifests Data.json
+++ b/pipeline/Stage Manifests Data.json
@@ -64,7 +64,7 @@
 										"value": "PU-WWI-REG",
 										"activities": [
 											{
-												"name": "Load Manifest Data_copy1",
+												"name": "Load Manifest Data",
 												"type": "Copy",
 												"dependsOn": [],
 												"policy": {
