Updating dataset: WWI_Stage_Manifest_Item_Table

--- a/dataset/WWI_Stage_Manifest_Item_Table.json
+++ b/dataset/WWI_Stage_Manifest_Item_Table.json
@@ -44,7 +44,10 @@
 				"value": "@dataset().SchemaName",
 				"type": "Expression"
 			},
-			"table": "manifest_item"
+			"table": {
+				"value": "@dataset().TableName",
+				"type": "Expression"
+			}
 		}
 	}
 }
