Updating pipeline: Stage Manifests Items

--- a/pipeline/Stage Manifests Items.json
+++ b/pipeline/Stage Manifests Items.json
@@ -128,10 +128,7 @@
 															"TableName": "manifest_item",
 															"DatabaseName": "WideWorldImporters",
 															"User": "Ernest",
-															"Password": {
-																"type": "SecureString",
-																"value": "**********"
-															}
+															"Password": "Nebadon@1515"
 														}
 													}
 												]
