--- a/pipeline/Stage Manifests Items.json
+++ b/pipeline/Stage Manifests Items.json
@@ -113,7 +113,7 @@
 																"type": "Expression"
 															},
 															"ManifestFile": {
-																"value": "@CONCAT( pipeline().parameters.Directory, '/', item().ManifestFile )",
+																"value": "@item().ManifestFile",
 																"type": "Expression"
 															}
 														}
