Updating pipeline: Stage Manifests Items

--- a/pipeline/Stage Manifests Items.json
+++ b/pipeline/Stage Manifests Items.json
@@ -177,10 +177,11 @@
 			},
 			"Directory": {
 				"type": "string",
-				"defaultValue": "New Arrival"
+				"defaultValue": "Arrival"
 			},
 			"ProcessUnitCode": {
-				"type": "string"
+				"type": "string",
+				"defaultValue": "PU-WWI-REG"
 			}
 		},
 		"folder": {
