--- a/pipeline/Stage Manifests Items.json
+++ b/pipeline/Stage Manifests Items.json
@@ -96,6 +96,7 @@
 															{
 																"source": {
 																	"type": "String",
+																	"physicalType": "String",
 																	"ordinal": 1
 																},
 																"sink": {
