Updating pipeline: Stage Manifests Items

--- a/pipeline/Stage Manifests Items.json
+++ b/pipeline/Stage Manifests Items.json
@@ -107,7 +107,7 @@
 															},
 															{
 																"source": {
-																	"type": "String",
+																	"type": "Int64",
 																	"ordinal": 2
 																},
 																"sink": {
