--- a/pipeline/Stage Manifests Items.json
+++ b/pipeline/Stage Manifests Items.json
@@ -107,7 +107,7 @@
 															},
 															{
 																"source": {
-																	"type": "Byte",
+																	"type": "String",
 																	"ordinal": 2
 																},
 																"sink": {
