Updating pipeline: Stage Manifests Items

--- a/pipeline/Stage Manifests Items.json
+++ b/pipeline/Stage Manifests Items.json
@@ -135,7 +135,7 @@
 																"type": "Expression"
 															},
 															"Directory": {
-																"value": "@pipeline().parameters.Directory",
+																"value": "@pipeline().parameters.ProcessUnitCode",
 																"type": "Expression"
 															},
 															"ManifestFile": {
