--- a/pipeline/Stage Manifests Items.json
+++ b/pipeline/Stage Manifests Items.json
@@ -5,7 +5,14 @@
 			{
 				"name": "Get Manifest List",
 				"type": "Lookup",
-				"dependsOn": [],
+				"dependsOn": [
+					{
+						"activity": "Get Customer ID From Unit ID",
+						"dependencyConditions": [
+							"Succeeded"
+						]
+					}
+				],
 				"policy": {
 					"timeout": "7.00:00:00",
 					"retry": 0,
@@ -135,7 +142,7 @@
 																"type": "Expression"
 															},
 															"Directory": {
-																"value": "@pipeline().parameters.ProcessUnitCode",
+																"value": "@activity('Get Customer ID From Unit ID').output.firstrow.code",
 																"type": "Expression"
 															},
 															"ManifestFile": {
@@ -165,6 +172,34 @@
 							}
 						}
 					]
+				}
+			},
+			{
+				"name": "Get Customer ID From Unit ID",
+				"type": "Lookup",
+				"dependsOn": [],
+				"policy": {
+					"timeout": "7.00:00:00",
+					"retry": 0,
+					"retryIntervalInSeconds": 30,
+					"secureOutput": false,
+					"secureInput": false
+				},
+				"userProperties": [],
+				"typeProperties": {
+					"source": {
+						"type": "AzureSqlSource",
+						"sqlReaderQuery": {
+							"value": "SELECT\n    customer_id,\n    code\nFROM \n    process.unit\nWHERE\n    id = @{pipeline().parameters.ProcessUnitID}",
+							"type": "Expression"
+						},
+						"queryTimeout": "02:00:00",
+						"partitionOption": "None"
+					},
+					"dataset": {
+						"referenceName": "SrcAzureSqlDataset",
+						"type": "DatasetReference"
+					}
 				}
 			}
 		],
