Updating pipeline: Stage Manifests Items

--- a/pipeline/Stage Manifests Items.json
+++ b/pipeline/Stage Manifests Items.json
@@ -137,10 +137,7 @@
 														"referenceName": "SrcManifestFiles",
 														"type": "DatasetReference",
 														"parameters": {
-															"BlobContainer": {
-																"value": "@pipeline().parameters.BlobContainer",
-																"type": "Expression"
-															},
+															"BlobContainer": "inbounddatafiles",
 															"Directory": {
 																"value": "@activity('Get Customer ID From Unit ID').output.firstrow.code",
 																"type": "Expression"
@@ -207,10 +204,6 @@
 			"ProcessUnitID": {
 				"type": "int",
 				"defaultValue": 1
-			},
-			"BlobContainer": {
-				"type": "string",
-				"defaultValue": "inbounddatafiles"
 			}
 		},
 		"folder": {
