Updating pipeline: Stage Manifests Items

--- a/pipeline/Stage Manifests Items.json
+++ b/pipeline/Stage Manifests Items.json
@@ -57,7 +57,7 @@
 					},
 					"activities": [
 						{
-							"name": "Switch1",
+							"name": "Determine Unit To Process",
 							"type": "Switch",
 							"dependsOn": [],
 							"userProperties": [],
